force-app/main/default/objects/Top_Crypto_Exchanges__c/Top_Crypto_Exchanges__c.object-meta.xml
<CustomObject>
    <label>Top Crypto Exchanges</label>
    <nameField>
        <label>Exchange Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Top Crypto Exchanges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>