force-app/main/default/objects/Top_Crypto_Exchanges__c/fields/Avg_Liquidity__c.field-meta.xml
<CustomField>
    <fullName>Avg_Liquidity__c</fullName>
    <inlineHelpText>It is the ability of a coin to be easily converted into cash or other coins. Enter a number that shows the average liquidity of this Exchange</inlineHelpText>
    <label>Avg. Liquidity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>