force-app/main/default/objects/Top_Crypto_Exchanges__c/fields/Coins__c.field-meta.xml
<CustomField>
    <fullName>Coins__c</fullName>
    <inlineHelpText>Enter the number of coins that are available for this Exchange.</inlineHelpText>
    <label>Coins</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>