force-app/main/default/objects/Top_Crypto_Exchanges__c/fields/Exchange_Score__c.field-meta.xml
<CustomField>
    <fullName>Exchange_Score__c</fullName>
    <inlineHelpText>The aggregator scores exchanges from 0.0 to 10.0 based on traffic, liquidity, trading volumes, and legitimacy of trading volumes reported, with weights attributed to each factor.</inlineHelpText>
    <label>Exchange Score</label>
    <precision>17</precision>
    <scale>1</scale>
    <type>Number</type>
</CustomField>