force-app/main/default/objects/Top_Crypto_Exchanges__c/fields/Markets__c.field-meta.xml
<CustomField>
    <fullName>Markets__c</fullName>
    <label>Markets</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>