force-app/main/default/objects/Top_Crypto_Exchanges__c/fields/Regulatory_Actions__c.field-meta.xml
<CustomField>
    <fullName>Regulatory_Actions__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Regulatory Actions</label>
    <referenceTo>Regulatory_Actions__c</referenceTo>
    <relationshipLabel>Top Crypto Exchanges</relationshipLabel>
    <relationshipName>Top_Crypto_Exchanges</relationshipName>
    <type>Lookup</type>
</CustomField>