force-app/main/default/objects/Top_Crypto_Exchanges__c/fields/Volume_24h__c.field-meta.xml
<CustomField>
    <fullName>Volume_24h__c</fullName>
    <inlineHelpText>It is the 24-hour trading volume of a cryptocurrency. Please enter how much value of a coin has been bought and sold over the course of a day.</inlineHelpText>
    <label>Volume(24h)</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>