force-app/main/default/objects/Top_Crypto_Exchanges__c/fields/Weekly_Visits__c.field-meta.xml
<CustomField>
    <fullName>Weekly_Visits__c</fullName>
    <inlineHelpText>Enter the number of weekly visits done to this exchange</inlineHelpText>
    <label>Weekly Visits</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>