force-app/main/default/objects/Top_Crypto_Exchanges__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Avg_Liquidity__c</columns>
    <columns>Coins__c</columns>
    <columns>Exchange_Score__c</columns>
    <columns>Fiat_Supported__c</columns>
    <columns>Markets__c</columns>
    <columns>Volume_24h__c</columns>
    <columns>Weekly_Visits__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>